# python-amazon-product-api

./: .bumpversion.cfg  .gitignore  .hgignore  .pylintrc  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  Pipfile  README  README.rst  amazonproduct.py  authors.txt  setup.cfg  setup.py  sync-with-github.sh  tox.ini
amazon/: product.py
amazonproduct/: __init__.py  api.py  core.py  errors.py  exceptions.py  extended.py  operations.py  paginators.py  processors.py  retry.py  simple.py  utils.py  version.py
debian/: changelog  control  rules
docs/: Makefile  basic-usage.rst  changes.rst  check_sphinx.py  conf.py  index.rst  license.rst  operations.rst  pagination.rst  product.rst  use-your-own.rst  watch-for-changes.sh  why.rst
examples/: .amazon-product-api  all-galileo-titles.py  config.py.example  get-cover.py  json-results.py  node-browser.py  operations-in-batch-mode.py  reviews.py  similar.py  simple-usage.py  using-beautifulsoup.py  using-xml-minidom.py  wishlists.py
misc/: docs-redirect.html
tests/: APICalls-fails-for-invalid-signature.xml  APICalls-fails-for-too-many-requests.xml  ItemLookup-B01M7SI4AE.xml  ItemLookup-InvalidParameterValue-errors-and-results.xml  ItemLookup-InvalidParameterValue-multiple-errors.xml  ItemLookup-InvalidParameterValue-single-error.xml  ItemSearch-RestrictedParameterValueCombination.xml  ItemSearch-test-page-1.xml  ItemSearch-test-page-10.xml  ItemSearch-test-page-11.xml  ItemSearch-test-page-2.xml  ItemSearch-test-page-3.xml  ItemSearch-test-page-4.xml  ItemSearch-test-page-5.xml  ItemSearch-test-page-6.xml  __init__.py  (+26 more)
(+8337 files in other folders)
