[metadata]
name = python-amazon-product-api
description = A Python wrapper for the Amazon Product Advertising API
long_description = file: README.rst
url = https://github.com/redtoad/python-amazon-product-api
project_urls =
    Source=https://github.com/redtoad/python-amazon-product-api
    Tracker=https://github.com/redtoad/python-amazon-product-api/issues

author = Sebastian Rahlf and others

license = MIT license
license_file = LICENSE
keywords = amazon product advertising api, amazon api wrapper, signed requests
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = no
packages = amazonproduct

[build_sphinx]
source-dir = docs
build-dir  = docs/.build
all_files  = 1

[upload_sphinx]
upload-dir = docs/.build/html

